automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,9 +430,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n",
+      "Mexico City, Mexico\n"
+     ]
+    }
+   ],
    "source": [
     "countries.append('Mexico')\n",
     "cities.append('Mexico City')\n",
@@ -456,9 +472,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A String\n",
+      "['a', 'list', 'of', 5, ['elements']]\n",
+      "{'this': 'is a dictionary'}\n"
+     ]
+    }
+   ],
    "source": [
     "different_elements = ['A String', [\"a\", 'list', \"of\", 5, [\"elements\"]], {'this': \"is a dictionary\"}]\n",
     "for element in different_elements:\n",
